k8s/infra/common/rook-ceph/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  annotations:
    gethomepage.dev/enabled: "false"
    gethomepage.dev/group: &network internal
    gethomepage.dev/name: Rook Ceph
    gethomepage.dev/icon: rook.svg
    gethomepage.dev/description: ""
spec:
  hostnames: ["rook.int.${MAIN_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
